# NaijaBet_Api

./: LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml  poetry-build.yml  py-build.yml
NaijaBet_Api/: bet9ja.py  id.py
NaijaBet_Api/bookmakers/: BaseClass.py  bet9ja.py  betking.py  nairabet.py
NaijaBet_Api/utils/: bet9ja_normalizer.json  betking_normalizer.json  jsonpaths.py  logger.py  nairabet_normalizer.json  normalizer.py
