[tool.poetry]
name = "odds-scraper"
version = "0.1.0"
description = ""
authors = ["graphitenerd <jayteealao@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
colander = "^1.8.3"
pandas = "^1.3.0"
coverage = "^5.5"
black = "^21.7b0"
jmespath = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
bandit = "^1.7.0"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
