[metadata]
name = NaijaBet_Api
version = 0.2.3
author = graphitenerd
author_email = jayteealao@gmail.com
description = A wrapper around the API of Nigerias major betting sites
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jayteealao/Naijabet_Api
project_urls =
    Bug Tracker = https://github.com/jayteealao/Naijabet_Api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = 
    NaijaBet_Api
    NaijaBet_Api.bookmakers
    NaijaBet_Api.utils

[options.data_files]
data = NaijaBet_Api/utils/bet9ja_normalizer.json, NaijaBet_Api/utils/nairabet_normalizer.json, NaijaBet_Api/utils/betking_normalizer.json

# [options.packages.find]
# where = .
# exclude = tests
# python_requires = >=3.6

[flake8]
exclude =
    .git,
    __pycache__,
    .pytest_cache,
    venv

ignore =
    # Put Error/Style codes here e.g. H301

max-line-length = 120
max-complexity = 10

[bandit]
targets: blueprint

[coverage:run]
branch = True
omit =
    */__main__.py
    */tests/*
    */venv/*

[coverage:report]
exclude_lines =
    pragma: no cover
    if __name__ == .__main__.:

[coverage:html]
directory = reports

[pylint]